# patch-release-me

./: .release.yml  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml
.github/: dependabot.yml
.github/workflows/: auto-patch-release.yml  build.yml  dep-review.yml  release-train.yml  release.yml  security.yml  self-action.yml
actions/: Dockerfile
src/: cli.rs  config.rs  default_locations.rs  defaults.rs  defaults.yml  error.rs  interactive.rs  main.rs  workflows.rs
