[package]
name = "patch-release-me"
version = "0.1.0"
edition = "2021"

authors = ["GeekMasher"]

rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI parser
clap = { version = "4.0", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
thiserror = "1"
anyhow = "1"
# logging
log = "0.4"
env_logger = "0.11"
# serde
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10.4"
glob = "0.3.1"
semver = { version = "1.0.22", features = ["serde"] }
