[package]
name = "patch-release-me"
version = "0.1.6"
license = "MIT"
description = "A tool to automate patching of your projects before you release them"

documentation = "https://docs.rs/patch-release-me"
readme = "README.md"
repository = "https://github.com/42ByteLabs/patch-release-me"

authors = ["GeekMasher"]

edition = "2021"
rust-version = "1.70"

[features]
default = []

[dependencies]
# CLI parser
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
thiserror = "1"
anyhow = "1"
# logging
log = "0.4"
env_logger = "0.11"
# tokio
tokio = { version = "1", features = ["full"] }
# serde
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

regex = "1.10.4"
glob = "0.3.1"
semver = { version = "1.0.22", features = ["serde"] }
