[package]
name = "patch-release-me"
version = "0.5.5"
license = "MIT"
description = "A tool to automate patching of your projects before you release them"

documentation = "https://docs.rs/patch-release-me"
readme = "README.md"
repository = "https://github.com/42ByteLabs/patch-release-me"

authors = ["GeekMasher"]

edition = "2024"
rust-version = "1.85"

[features]
default = []

[dependencies]
# CLI parser
clap = { version = "4.5", features = ["derive", "env"] }
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
thiserror = "2"
anyhow = "1"
# logging
log = "0.4"
env_logger = "0.11"
# tokio
tokio = { version = "1", features = ["full"] }
# serde
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

regex = "1.11"
glob = "0.3"
semver = { version = "1", features = ["serde"] }
lazy_static = "1.5.0"

